Assignment4/initial/src/main/bkool/parser/.antlr/BKOOLParser.py
# Generated from /home/tuandat/Downloads/assignment4/initial/src/main/bkool/parser/BKOOL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'boolean'", 
                     "'break'", "'class'", "'continue'", "'do'", "'else'", 
                     "'extends'", "'float'", "'if'", "'int'", "'new'", "'string'", 
                     "'then'", "'for'", "'return'", "'void'", "'nil'", "'this'", 
                     "'final'", "'static'", "'to'", "'downto'", "'+'", "'-'", 
                     "'*'", "'/'", "'\\'", "'%'", "'!='", "'=='", "'<'", 
                     "'>'", "'<='", "'>='", "'||'", "'&&'", "'!'", "'^'", 
                     "<INVALID>", "':='", "'='", "'['", "']'", "'{'", "'}'", 
                     "'('", "')'", "';'", "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "LINE_CMT", "BLOCK_CMT", "BOOLEAN", "BREAK", 
                      "CLASS", "CONTINUE", "DO", "ELSE", "EXTENDS", "FLOAT", 
                      "IF", "INT", "NEW", "STRING", "THEN", "FOR", "RETURN", 
                      "VOID", "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", 
                      "ADD", "SUB", "MUL", "DIV", "INT_DIV", "MOD", "NOT_EQUAL", 
                      "EQUAL", "LT", "GT", "LE", "GE", "OR", "AND", "NOT", 
                      "CONCATENATION", "NEW_OP", "ASSINGMENT", "ASSIGN", 
                      "LSB", "RSB", "LP", "RP", "LB", "RB", "SM", "CL", 
                      "DOT", "CM", "BOOLLIT", "STRINGLIT", "FLOATLIT", "INTLIT", 
                      "ID", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "WS", "NEWLINE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_memdecl = 2
    RULE_attribute_declare = 3
    RULE_immutable_attribute = 4
    RULE_mutable_attribube = 5
    RULE_const_decl = 6
    RULE_var_decl = 7
    RULE_attribute_immutable = 8
    RULE_attribute_mutable = 9
    RULE_declare_assign = 10
    RULE_method_declare = 11
    RULE_expr = 12
    RULE_expr1 = 13
    RULE_expr2 = 14
    RULE_expr3 = 15
    RULE_expr4 = 16
    RULE_expr5 = 17
    RULE_expr6 = 18
    RULE_expr7 = 19
    RULE_expr8 = 20
    RULE_expr9 = 21
    RULE_expr10 = 22
    RULE_expr11 = 23
    RULE_operands = 24
    RULE_array_cell = 25
    RULE_field_access = 26
    RULE_list_of_expr = 27
    RULE_statement = 28
    RULE_block_statement = 29
    RULE_member_block = 30
    RULE_var_mem = 31
    RULE_const_member_block = 32
    RULE_var_member_block = 33
    RULE_assignment_statement = 34
    RULE_lhs = 35
    RULE_if_statement = 36
    RULE_for_statement = 37
    RULE_break_statement = 38
    RULE_continue_statement = 39
    RULE_return_statement = 40
    RULE_member_access = 41
    RULE_method_invocation_statement = 42
    RULE_data_type = 43
    RULE_function_type = 44
    RULE_array_type = 45
    RULE_literal = 46
    RULE_class_type = 47
    RULE_parameter_list = 48
    RULE_parameter = 49
    RULE_ids_list = 50
    RULE_array_lit = 51
    RULE_array_list = 52

    ruleNames =  [ "program", "classdecl", "memdecl", "attribute_declare", 
                   "immutable_attribute", "mutable_attribube", "const_decl", 
                   "var_decl", "attribute_immutable", "attribute_mutable", 
                   "declare_assign", "method_declare", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "expr8", "expr9", "expr10", "expr11", "operands", "array_cell", 
                   "field_access", "list_of_expr", "statement", "block_statement", 
                   "member_block", "var_mem", "const_member_block", "var_member_block", 
                   "assignment_statement", "lhs", "if_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "member_access", "method_invocation_statement", "data_type", 
                   "function_type", "array_type", "literal", "class_type", 
                   "parameter_list", "parameter", "ids_list", "array_lit", 
                   "array_list" ]

    EOF = Token.EOF
    LINE_CMT=1
    BLOCK_CMT=2
    BOOLEAN=3
    BREAK=4
    CLASS=5
    CONTINUE=6
    DO=7
    ELSE=8
    EXTENDS=9
    FLOAT=10
    IF=11
    INT=12
    NEW=13
    STRING=14
    THEN=15
    FOR=16
    RETURN=17
    VOID=18
    NIL=19
    THIS=20
    FINAL=21
    STATIC=22
    TO=23
    DOWNTO=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    INT_DIV=29
    MOD=30
    NOT_EQUAL=31
    EQUAL=32
    LT=33
    GT=34
    LE=35
    GE=36
    OR=37
    AND=38
    NOT=39
    CONCATENATION=40
    NEW_OP=41
    ASSINGMENT=42
    ASSIGN=43
    LSB=44
    RSB=45
    LP=46
    RP=47
    LB=48
    RB=49
    SM=50
    CL=51
    DOT=52
    CM=53
    BOOLLIT=54
    STRINGLIT=55
    FLOATLIT=56
    INTLIT=57
    ID=58
    UNCLOSE_STRING=59
    ILLEGAL_ESCAPE=60
    WS=61
    NEWLINE=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassdeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.classdecl()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 111
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def memdecl(self):
            return self.getTypedRuleContext(BKOOLParser.MemdeclContext,0)


        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classdecl




    def classdecl(self):

        localctx = BKOOLParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(BKOOLParser.CLASS)
                self.state = 114
                self.match(BKOOLParser.ID)
                self.state = 115
                self.match(BKOOLParser.LP)
                self.state = 116
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(BKOOLParser.CLASS)
                self.state = 118
                self.match(BKOOLParser.ID)
                self.state = 119
                self.match(BKOOLParser.LP)
                self.state = 120
                self.memdecl()
                self.state = 121
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(BKOOLParser.CLASS)
                self.state = 124
                self.match(BKOOLParser.ID)
                self.state = 125
                self.match(BKOOLParser.EXTENDS)
                self.state = 126
                self.match(BKOOLParser.ID)
                self.state = 127
                self.match(BKOOLParser.LP)
                self.state = 128
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.match(BKOOLParser.CLASS)
                self.state = 130
                self.match(BKOOLParser.ID)
                self.state = 131
                self.match(BKOOLParser.EXTENDS)
                self.state = 132
                self.match(BKOOLParser.ID)
                self.state = 133
                self.match(BKOOLParser.LP)
                self.state = 134
                self.memdecl()
                self.state = 135
                self.match(BKOOLParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Method_declareContext,0)


        def memdecl(self):
            return self.getTypedRuleContext(BKOOLParser.MemdeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_memdecl




    def memdecl(self):

        localctx = BKOOLParser.MemdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memdecl)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.attribute_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.method_declare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.attribute_declare()
                self.state = 142
                self.memdecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.method_declare()
                self.state = 145
                self.memdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def immutable_attribute(self):
            return self.getTypedRuleContext(BKOOLParser.Immutable_attributeContext,0)


        def mutable_attribube(self):
            return self.getTypedRuleContext(BKOOLParser.Mutable_attribubeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_declare




    def attribute_declare(self):

        localctx = BKOOLParser.Attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute_declare)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.immutable_attribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.mutable_attribube()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Immutable_attributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def const_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Const_declContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_immutable_attribute




    def immutable_attribute(self):

        localctx = BKOOLParser.Immutable_attributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_immutable_attribute)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(BKOOLParser.FINAL)
                self.state = 154
                self.const_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(BKOOLParser.FINAL)
                self.state = 156
                self.match(BKOOLParser.STATIC)
                self.state = 157
                self.const_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.match(BKOOLParser.STATIC)
                self.state = 159
                self.match(BKOOLParser.FINAL)
                self.state = 160
                self.const_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mutable_attribubeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def var_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Var_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_mutable_attribube




    def mutable_attribube(self):

        localctx = BKOOLParser.Mutable_attribubeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mutable_attribube)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.STATIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(BKOOLParser.STATIC)
                self.state = 164
                self.var_decl()
                pass
            elif token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.var_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(BKOOLParser.Data_typeContext,0)


        def attribute_immutable(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_immutableContext,0)


        def SM(self):
            return self.getToken(BKOOLParser.SM, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_const_decl




    def const_decl(self):

        localctx = BKOOLParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.data_type()
            self.state = 169
            self.attribute_immutable()
            self.state = 170
            self.match(BKOOLParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(BKOOLParser.Data_typeContext,0)


        def attribute_mutable(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_mutableContext,0)


        def SM(self):
            return self.getToken(BKOOLParser.SM, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_var_decl




    def var_decl(self):

        localctx = BKOOLParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.data_type()
            self.state = 173
            self.attribute_mutable()
            self.state = 174
            self.match(BKOOLParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_immutableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def declare_assign(self):
            return self.getTypedRuleContext(BKOOLParser.Declare_assignContext,0)


        def CM(self):
            return self.getToken(BKOOLParser.CM, 0)

        def attribute_immutable(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_immutableContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_immutable




    def attribute_immutable(self):

        localctx = BKOOLParser.Attribute_immutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute_immutable)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.match(BKOOLParser.ID)
                self.state = 177
                self.declare_assign()
                self.state = 178
                self.match(BKOOLParser.CM)
                self.state = 179
                self.attribute_immutable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.match(BKOOLParser.ID)
                self.state = 182
                self.match(BKOOLParser.CM)
                self.state = 183
                self.attribute_immutable()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 184
                self.match(BKOOLParser.ID)
                self.state = 185
                self.declare_assign()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 186
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_mutableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def declare_assign(self):
            return self.getTypedRuleContext(BKOOLParser.Declare_assignContext,0)


        def CM(self):
            return self.getToken(BKOOLParser.CM, 0)

        def attribute_mutable(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_mutableContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_mutable




    def attribute_mutable(self):

        localctx = BKOOLParser.Attribute_mutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attribute_mutable)
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.match(BKOOLParser.ID)
                self.state = 190
                self.declare_assign()
                self.state = 191
                self.match(BKOOLParser.CM)
                self.state = 192
                self.attribute_mutable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.match(BKOOLParser.ID)
                self.state = 195
                self.match(BKOOLParser.CM)
                self.state = 196
                self.attribute_mutable()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 197
                self.match(BKOOLParser.ID)
                self.state = 198
                self.declare_assign()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 199
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_declare_assign




    def declare_assign(self):

        localctx = BKOOLParser.Declare_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_declare_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(BKOOLParser.ASSIGN)
            self.state = 203
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def function_type(self):
            return self.getTypedRuleContext(BKOOLParser.Function_typeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def block_statement(self):
            return self.getTypedRuleContext(BKOOLParser.Block_statementContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(BKOOLParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_method_declare




    def method_declare(self):

        localctx = BKOOLParser.Method_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_method_declare)
        self._la = 0 # Token type
        try:
            self.state = 231
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 205
                self.match(BKOOLParser.STATIC)
                self.state = 206
                self.function_type()
                self.state = 207
                self.match(BKOOLParser.ID)
                self.state = 208
                self.match(BKOOLParser.LB)
                self.state = 210
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.ID))) != 0):
                    self.state = 209
                    self.parameter_list()


                self.state = 212
                self.match(BKOOLParser.RB)
                self.state = 213
                self.block_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 215
                self.function_type()
                self.state = 216
                self.match(BKOOLParser.ID)
                self.state = 217
                self.match(BKOOLParser.LB)
                self.state = 219
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.ID))) != 0):
                    self.state = 218
                    self.parameter_list()


                self.state = 221
                self.match(BKOOLParser.RB)
                self.state = 222
                self.block_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 224
                self.match(BKOOLParser.ID)
                self.state = 225
                self.match(BKOOLParser.LB)
                self.state = 227
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.ID))) != 0):
                    self.state = 226
                    self.parameter_list()

